--- a/index.qmd
+++ b/index.qmd
@@ -69,7 +69,7 @@ library("leaflet.extras")
 ::: {.gradient_box style="text-align: center; position: absolute; left: 50%; top: 70%; width: 450px; transform: translate(-50%, -50%)"}
 [Simon Oiry]{style="color: black; font-size: 60px; font-weight: bold;"}
 
-[Phd student]{style="color: black; font-size: 55px; font-weight: bold;"}
+[PhD student]{style="color: black; font-size: 55px; font-weight: bold;"}
 :::
 
 ::: {.gradient_box style="text-align: center; position: absolute; left: 50%; top: 85%; width: 700px; transform: translate(-50%, -50%)"}
@@ -77,7 +77,7 @@ library("leaflet.extras")
 :::
 
 ::: {.gradient_box style="text-align: center; position: absolute; left: 50%; top: 95%; width: 90%; transform: translate(-50%, -50%)"}
-[Members of the Commitee : Stanislas Dubois & Emanuele Organelli]{style="color: black;font-size: 55px; font-weight: bold;"}
+[Members of the Committee : Stanislas Dubois & Emanuele Organelli]{style="color: black;font-size: 55px; font-weight: bold;"}
 :::
 
 ::: {.absolute bottom="35%" left="5%"}
@@ -376,25 +376,25 @@ library("leaflet.extras")
 
 ::: {.fragment .fade-in-then-out .absolute top="35%" left="45%" fragment-index="3"}
 -   Pheophyceae, Brown algae
--   Chloropyceae, Green algae
+-   Chlorophyceae, Green algae
 :::
 
 ::: {.fragment .fade-in-then-out .absolute top="35%" left="45%" fragment-index="4"}
 -   Pheophyceae, Brown algae
--   Chloropyceae, Green algae
+-   Chlorophyceae, Green algae
 -   Magnoliopsida, Seagrasses
 :::
 
 ::: {.fragment .fade-in-then-out .absolute top="35%" left="45%" fragment-index="5"}
 -   Pheophyceae, Brown algae
--   Chloropyceae, Green algae
+-   Chlorophyceae, Green algae
 -   Magnoliopsida, Seagrasses
 -   Bracilariophyceae, Microphytobenthos
 :::
 
 ::: {.fragment .fade-in-then-out .absolute top="35%" left="45%" fragment-index="6"}
 -   Pheophyceae, Brown algae
--   Chloropyceae, Green algae
+-   Chlorophyceae, Green algae
 -   Magnoliopsida, Seagrasses
 -   Bracilariophyceae, Microphytobenthos
 -   Rhodophyceae, Red algae
@@ -718,7 +718,7 @@ Good Knowledge of soft bottom intertidal habitats
 :::
 
 ::: {.absolute top="47%" width="1200" style="font-size: 40px;"}
--   Identify and characterise critical applications (Pilot Studies) of remote sensing to study coastal biodiversity.
+-   Identify and characterize critical applications (Pilot Studies) of remote sensing to study coastal biodiversity.
 :::
 
 ::: {.absolute top="55%" width="1200" style="font-size: 40px;"}
@@ -726,7 +726,7 @@ Good Knowledge of soft bottom intertidal habitats
 :::
 
 ::: {.absolute top="63%" width="1200" style="font-size: 40px;"}
--   Define the activities necessary to utilise current and planned sensors to detect measures of marine biodiversity; or define new approaches, if the existing ones are not considered capable to fulfil the targeted science objectives.
+-   Define the activities necessary to utilize current and planned sensors to detect measures of marine biodiversity; or define new approaches, if the existing ones are not considered capable to fulfill the targeted science objectives.
 :::
 
 ::: {.absolute top="11%" left="75%" width="400" style="font-size: 40px;"}
@@ -1438,7 +1438,7 @@ tr:nth-child(4) {
 Fast.ai workflow
 :::
 ::: {.absolute .fragment .fade-in fragment-index="1" bottom="29%" left="44%" style="font-size: 50px;"}
-Neurtal Network
+Neural Network
 :::
 :::
 
@@ -1710,7 +1710,7 @@ B10 is  important for the model
 :::
 
 ::: {.absolute .fragment .fade-in fragment-index="1" top="10%" left="40%" style="font-size: 50px;"}
-  - **Data avaibility in the paper**
+  - **Data availability in the paper**
 :::
 
 ::: {.absolute .fragment .fade-in fragment-index="1" top="18%" left="40%" style="font-size: 50px;"}
@@ -2509,7 +2509,7 @@ Updated Training Dataset
 Fast.ai workflow
 :::
 ::: {.absolute .fragment .fade-in fragment-index="1" bottom="29%" left="44%" style="font-size: 50px;"}
-Neurtal Network
+Neural Network
 :::
 
 ::: {.absolute .fragment .fade-in fragment-index="2" top="43%" right="22%"}
@@ -3035,7 +3035,7 @@ saveWidget(m, "maps/map_Chambers.html", selfcontained = TRUE)
 :::
 
 ::: {.absolute .fragment .fade-in fragment-index="1" top="25%" left="40%" style="font-size: 60px;"}
-**Control** : Ambiant air temperature (~ 20°C)
+**Control** : Ambient air temperature (~ 20°C)
 :::
 
 ::: {.absolute .fragment .fade-in fragment-index="2" data-id="txt1" top="41%" left="40%" style="font-size: 60px;"}
@@ -3237,7 +3237,7 @@ During the experiment :
 ::: {.fragment .fade-out fragment-index="3"}
 ::: {.absolute .fragment .fade-in fragment-index="1" top="5%" left="0%"}
 - **June 2023** :
-  - Learning and Intercalibration exercice with the EPHE Dinard and LeCNAM Cherbourg
+  - Learning and Intercalibration exercise with the EPHE Dinard and LeCNAM Cherbourg
 :::
 
 ::: {.fragment .fade-in fragment-index="1" .absolute top="20%" left="0%"}
